lsp-manager2/kuber/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: lsp-manager
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /lsp(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: lsp-manager
                port:
                  number: 3000
